crates/languages/bevy_mod_scripting_lua_derive/tests/fail/simple/invalid-output-type-custom-body.rs
use bevy::prelude::*;
use bevy_mod_scripting::api::*;

#[derive(LuaProxy, Reflect, Clone)]
#[proxy(functions = [
    r#"
    #[lua(kind="Function", output(proxy))]
    fn fn_returning_proxy() -> Self {
        2
    }
    "#,
])]
pub struct MyStruct;
pub fn main() {}
